# svchat

./: .gitignore  Cargo.toml  run
src/: client.rs  config.rs  events.rs  main.rs  message.rs  server.rs  structs.rs
