[package]
name = "svchat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ctrlc = { version = "3.1.6", features = ["termination"] }
termion = "1.5.6"
tui = { version = "0.16", default-features = false, features = ['termion'] }
serde = { version = "1.0", features = ['derive']}
serde_json = "1.0"
unicode-width = "0.1.5"

